--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "mysql2": "^3.10.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "stripe": "^16.1.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
